# xml2pg-ingestion

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.ini  docker-compose.yml  pyproject.toml
src/: main.py
src/db/: connection.py  copy.py  ddl.py  finalize.py  models.py  staging.py
src/pipeline/: __init__.py  batching.py  consumer.py  coordinator.py  metrics.py  producer.py
src/settings/: config.py  env_settings.py  ini_settings.py  logging.py  settings.py
src/utils/: errors.py
src/xml/: parser.py  reader.py  sample_generator.py
tests/: test_batching.py  test_consumer.py  test_coordinator_smoke.py  test_producer.py  test_xml_parser.py
tests/fixtures/: small.xml  test.xml
