[project]
name = "xml2pg-ingestion"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.17.2",
    "asyncpg>=0.31.0",
    "colorlog>=6.10.1",
    "lxml>=6.0.2",
    "psycopg>=3.3.2",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "sqlalchemy>=2.0.45",
]
